docs/sass/style.scss
/* ... */
.video-section {
  padding: 30px 0;
  p {
    color: $blue;
    //text-shadow: 0px 0px 30px rgba(0,0,0,1);
    font-size: 20px;
    text-align: left;
    line-height: 1.1;
  }
}
#video-container {
  //box-shadow: 0px 0px 30px rgba(0,0,0,0.8);
  iframe {
    max-width: 100%;
    margin: 30px 0 30px;
  }
}
#video-container img {
  margin-top: 30px;
  margin-bottom:5px;
  cursor: pointer; cursor: hand;
  width: 100%;
}
#video-privacy {
  margin-bottom:30px;
}
.btn-lg.btn-blue {
  background-color: $blue;
  color: #fff;
  border-radius: 0;
  text-transform: uppercase;
  text-decoration: none;
  font-size: 25px;
  box-shadow: 0px 0px 30px rgba(0,0,0,1);
}

/*
 * Call section
 */

.calltool-section  {
  background: url('../images/circuit-pattern-sm2.png') repeat #000;
  padding: 60px 0 80px 0;

  h1, h2 {
    padding: 0;
    margin: 0;
  }
  h1 {
    font-family: 'Lato';
    font-weight: 700;
    letter-spacing: 0.1em;
    text-transform: uppercase;
  }
  h2 {
    margin-bottom: 1em;
    font-weight: 300;
  }

  .connect {
    color: $white;
    @extend %button;
    margin-top: 0.5em;

  }
}
#call-script {
  background-color: #fff;
  text-shadow: none;
  color: $black;
  font-size: 18px;
  padding: 1em 2em 2em 2em;
  font-weight: 300;
  text-align: left;
  //box-shadow: 0px 0px 50px rgba(0,0,0,0.7);
  margin-top:20px;
  box-sizing: border-box;

  h5 {
    text-align: left;
    color: $blue;
    text-transform: uppercase;
    font-size: 18px;
    margin-top: 0.5em;
    padding: 0;
    font-weight: 700;
    letter-spacing: 0.05em;
  }
}
#tf-call-widget-form {
  text-align:center;
  //padding-left: 10px;
  @include breakpoint($medium) {
    padding-left: 10px;
  }
  padding-top: 10px;
  h5 {
    text-transform: uppercase;
    font-size: 14px;
    margin-top: 20px;
    margin-bottom: 20px;
    margin-top: 2.5em;
    font-family: 'Lato';
    font-weight: 400;
    font-style: normal;
    text-align: left;
    margin-left: 8%;
    letter-spacing: 0.12em;
    line-height: 18px;
    width: 84%;
    //margin-right: -2%;
  }
  label {
    font-size: 16px;
  }
  .privacy-info {
    text-align: center;
    font-weight: 300;
    font-size: 0.9em;
    margin-top: -1.2em;
  }
  h6 {
    margin-top: 1em;
    font-size: 1.4em;
    font-weight: 400;
    letter-spacing: 0.02em;
    font-style: italic;

    a:hover {
      text-decoration: underline;
    }

  }



  .input-lg {
    margin: 0 auto;
    font-family: 'Lato';
    font-weight: 300;
    font-size: 22px;
    background: rgba(255,255,255,0.25);
    color: #fff;
    outline: 0;
    border: 0;
    -webkit-appearance: none;
    border-radius: 0;
    border-bottom: 4px solid #fff;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    text-align: left;
    width: 84%;
    //text-align: center;
    &:focus {
      outline: 0;
      -webkit-box-shadow: none;
      -moz-box-shadow: none;
      box-shadow: none;
    }

  }
  ::-webkit-input-placeholder { color:#fff; }
  ::-moz-placeholder { color:#fff; }
  :-ms-input-placeholder { color:#fff; }
  input:-moz-placeholder { color:#fff; }

}
// .btn-lg.btn-black {
//   background-color: #000;
//   border-radius: 0;
//   font-size: 25px;
//   text-transform: uppercase;
//   padding: 9px 24px;
//     border: 1px solid #000;
//   &:hover {
//     color: #fff;
//     border: 1px solid #fff;
//   }
// }
/*
 * Background section
 */
.background-section {
  padding-top: 30px;
  padding-bottom:50px;
  background: #fff;
  position: relative;
  @extend %white-tile;

  // p:first-of-type {
  //   font-size: 22px;
  //   line-height: 27px;
  //   margin-top: 60px;
  // }
  p {
    //color: #fff;
    color: #000;
    font-style: normal;
    font-size: 14px;

    @include breakpoint($medium) {
      font-size: 1.2em;
    }
    text-align: left;
    //text-shadow: 0px 0px 20px black;
    text-shadow: none;
    opacity: 1;
    margin-bottom:20px;
    font-weight: 300;
  }
  // h1 {
  //   color: $blue;
  //   margin: 40px 0 20px 0;
  // }
  h1, h2 {
    color: $black;
    margin: 40px 0 20px 0;
    text-shadow: none;

  }
  h1 {
    font-size: 36px;
    text-align: left;
  }
  h2 {
    margin-top: 1.4em;
    margin-bottom: 20px;
    font-size: 1.8em;
    text-align: left;
  }
}

// .background-section .blue-bg {

//   background: transparent;
//   &::before {
//     background: url('../images/circuit-pattern-blue.png') repeat $blue;
//     opacity: 0.5 !important;
//   }
// }





// QUOTES

.quote-section {
  background: url('../images/circuit-pattern-sm2.png') repeat #000;
  text-shadow: none;
  padding-bottom: 40px;
  text-align: center;
  h1 {
    margin-top:50px; 
    margin-bottom: 0;
    text-align: center;
  }
  div div div { // quotes
    margin-bottom: 3em;
    &:first-of-type {
      margin-top: 60px;
    }
    a {
      float: right;
      @include breakpoint($medium) {
        padding-right: 4em;
      }
      text-transform: uppercase;
      font-weight: 400;
      letter-spacing: 0.15em;
      font-size: 0.8em;
    }
  }

  p {
    font-size: 22px;
    font-weight: 300;
    line-height: 27px;
  }

}
/* ... */

